# confluence-space-cloner

./: LICENSE  Makefile  README.md  pyproject.toml
confluence_space_cloner/: main.py
confluence_space_cloner/lib/: config.py  confluence.py
confluence_space_cloner/lib/confluence/: __init__.py  api.py  typing.py
