[tool.poetry]
name = "confluence-space-cloner"
version = "0.1.0"
description = ""
authors = ["Michael Gambold <7439294+michaelgambold@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
